--- a/src/webui/_locales/sw/messages.json
+++ b/src/webui/_locales/sw/messages.json
@@ -68,8 +68,8 @@
         "description": "Text on the big connection button telling the user that if they click it, Psiphon will start trying to connect to the network. This is shown to the user while Psiphon is disconnected."
     },
     "connection#egress-region-combo-label": {
-        "message": "Unganisha kwa",
-        "description": "The label for the 'Psiphon Server Region' combo box control located on the connection tab. It should be read like 'Connect via Great Britain' or 'Connect via Japan' or 'Connect via Fastest Server'."
+        "message": "Chagua eneo la seva",
+        "description": "The label for the 'Psiphon Server Region' combo box control located on the connection tab."
     },
     "settings#error-alert": {
         "message": "<strong>Kosa! tafadhali rekebisha thamani kabla isiyosahihi kabla ya kuendelea.",
@@ -143,12 +143,8 @@
         "message": "Maeneo ya Psiphon Seva",
         "description": "Settings section heading. In this section the user can choose to use a Psiphon server in a specific country/region (or the default, which is just to choose the best/fastest region). The word 'Psiphon' must not be translated or transliterated."
     },
-    "settings#egress-region#label": {
-        "message": "Unganisha kwa",
-        "description": "The label for the 'Psiphon Server Region' combo box control located on the settings tab. It should be read like 'Connect via Great Britain' or 'Connect via Japan' or 'Connect via Fastest Server'."
-    },
     "settings#egress-region#select-best-performance": {
-        "message": "Haraka nchi",
+        "message": "Best Performance",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. This is the default option and indicates that Psiphon will use a server in the best/fastest region."
     },
     "settings#egress-region#select-us": {
@@ -256,11 +252,11 @@
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Australia will be used."
     },
     "settings#egress-region#description": {
-        "message": "Psiphon ikiwa na seva katika nchi tofauti. Tumia Psiphon seva katika nchi iliyofungwa katika sehemu ya nchi yako kwa ujumla itatoa kiufasaha kuunganishwa kwa mtandao, lakini kwa matumaini ya kufikia tovuti na huduma kama ni karibu na nchi maalum.",
+        "message": "Psiphon has servers in many different countries and regions. Using a Psiphon server in a region close to your home country will generally provide a better network connection, but you may wish to access websites and services like you are virtually in a specific country or region.",
         "description": "Help text in the 'Psiphon Server Region' settings section explaining what the option is and why the user may want to override the default ('best') setting value. The word 'Psiphon' must not be translated or transliterated."
     },
     "settings#egress-region#default": {
-        "message": "Kuchagua kaida 1“Nchi ya haraka”1 chaguo inaruhusu Psiphon kuchagua seva kiautomati, ambayo kwa ujumla italeta muunganisho bora wa mtandao.",
+        "message": "Choosing the default <strong>“Best Performance”</strong> option allows Psiphon to automatically choose a server, which will generally result in the best network connection.",
         "description": "Help text below the 'Psiphon Server Region' combo box. It explains to the user what the default (and best) option is. The word 'Psiphon' must not be translated or transliterated."
     },
     "settings#egress-region#invalid-error-msg": {
@@ -272,7 +268,7 @@
         "description": "Title text of the error modal dialog shown when it is detected that the user has an invalid 'Psiphon Server Region' currently configured."
     },
     "settings#egress-region#error-modal-body-http": {
-        "message": "Umesanidi Psiphon kutumia seva katika eneo husika.1\nHata hivyo, ilo eneo halipatikani tena.2\nUnatakiwa uchague eneo jipya au badili kaida  “Nchi ya haraka” chaguo.",
+        "message": "You have configured Psiphon to use a server in a specific region.<br>\nHowever, that region is no longer available.<br>\nYou must choose a new region or change to the default “Best Performance” choice.",
         "description": "Descriptive body text of the error modal dialog shown when it is detected that the user has an invalid 'Psiphon Server Region' currently configured. The word 'Psiphon' must not be translated or transliterated."
     },
     "settings#local-proxy-ports#heading": {
@@ -488,7 +484,7 @@
         "description": "The application/product/tool tagline/slogan/motto part of the fancy title at the top of the 'About' page. 'Beyond Borders' is the slogan that is also used on the Psiphon website -- it is meant to suggest that Psiphon can help users to get to the internet beyond the border (firewall) of the country they live in. The word 'Psiphon' must not be translated or transliterated."
     },
     "about#description": {
-        "message": "Psiphon ni <strong>uthibitisho wa kifaa cha mzunguko</strong>  — imeundwa kutoa ufikio kwenye  mtandao ulio wazi,",
+        "message": "Psiphon ni <strong>uthibitisho wa kifaa cha mzunguko</strong>  — imeundwa kutoa ufikio kwenye  mtandao ulio wazi,sensa z zamani na firewall. Ni <strong>chanzo wazi</strong> na kukuza kwenye Toronto, Canada.",
         "description": "Paragraph on the 'About' page telling users generally what Psiphon is. The word 'Psiphon' must not be translated or transliterated."
     },
     "about#visit-download-site": {
@@ -560,7 +556,7 @@
         "description": "Appears in the notification area balloon when Psiphon has been minimized to the Windows' notification area (aka 'system tray' aka 'systray', the area of the taskbar with the clock, battery indicator, and other icons). The word 'Psiphon' must not be translated or transliterated."
     },
     "appbackend#minimized-to-systray-body": {
-        "message": "Bonyeza ikoni kwa kuomba mrejesho",
+        "message": "Bonyeza ikoni ili kurejesha programu",
         "description": "Appears in the notification area balloon when Psiphon has been minimized to the Windows' notification area (aka 'system tray' aka 'systray', the area of the taskbar with the clock, battery indicator, and other icons)."
     },
     "appbackend#os-unsupported": {
