--- a/src/webui/_locales/ru/messages.json
+++ b/src/webui/_locales/ru/messages.json
@@ -52,7 +52,7 @@
         "description": "Text on the big connection button telling the user that if they click it, they will be disconnected from the network. This is shown when the user is currently connected."
     },
     "connection#stopping-msg": {
-        "message": "Соединение Psiphon <span class=\"state-word\">отключается</span>…",
+        "message": "Psiphon <span class=\"state-word\">отключается</span>…",
         "description": "Message in the big connection status box telling the user that Psiphon is currently trying to disconnect from the network. The word 'Psiphon' must not be translated or transliterated."
     },
     "connection#wait-btn": {
@@ -60,7 +60,7 @@
         "description": "Text on the big connection button telling the user to wait while Psiphon tries to disconnect from the network. When this message is shown, the button is disabled."
     },
     "connection#stopped-msg": {
-        "message": "Соединение Psiphon <span class=\"state-word\">отключено</span>",
+        "message": "Psiphon <span class=\"state-word\">отключен</span>",
         "description": "Message in the big connection status box telling the user that Psiphon is currently not connected to the network. The word 'Psiphon' must not be translated or transliterated."
     },
     "connection#connect-btn": {
@@ -112,11 +112,11 @@
         "description": "Settings section heading. If the user clicks this, the 'Split Tunnel' section will expand and can be edited. If 'split tunnel' is enabled, if the user is trying to get to a website in his/her own country, they will connect to it directly, instead of through Psiphon."
     },
     "settings#split-tunnel#help-text": {
-        "message": "If enabled, requests made to servers within your home country will not be tunneled through Psiphon.",
+        "message": "Если эта опция включена, обращения к серверам в границах вашей страны не будут проходить через Psiphon.",
         "description": "Text explaining to the user what the 'Split Tunnel' setting does if enabled. The word 'Psiphon' must not be translated or transliterated."
     },
     "settings#split-tunnel#reason": {
-        "message": "Websites within your home country are generally not blocked, so enabling this option will give you faster access to those sites and can sometimes reduce ISP data usage costs.",
+        "message": "Если веб-сайты в вашей стране не блокируются, включите эту опцию и получите более быстрый доступ к таким сайтам. Иногда это может снизить затраты на пользование интернетом.",
         "description": "Help text in the 'Split Tunnel' settings section explaining to the user why they might want to modify (enable) the setting."
     },
     "settings#split-tunnel#enable-label": {
@@ -252,11 +252,11 @@
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Australia will be used."
     },
     "settings#egress-region#description": {
-        "message": "Psiphon has servers in many different countries and regions. Using a Psiphon server in a region close to your home country will generally provide a better network connection, but you may wish to access websites and services like you are virtually in a specific country or region.",
+        "message": "У Psiphon есть серверы в разных странах и регионах. Обычно чем ближе сервер Psiphon, тем лучше связь. С другой стороны, вам может понадобиться работать с сайтами и сервисами так, словно вы находитесь в одной стране с сервером Psiphon.",
         "description": "Help text in the 'Psiphon Server Region' settings section explaining what the option is and why the user may want to override the default ('best') setting value. The word 'Psiphon' must not be translated or transliterated."
     },
     "settings#egress-region#default": {
-        "message": "Choosing the default <strong>“Best Performance”</strong> option allows Psiphon to automatically choose a server, which will generally result in the best network connection.",
+        "message": "Если оставить опцию <strong>“Лучшая производительность”</strong>, то Psiphon будет автоматически выбирать сервер, что, в целом, повышает качество подключения к сети.",
         "description": "Help text below the 'Psiphon Server Region' combo box. It explains to the user what the default (and best) option is. The word 'Psiphon' must not be translated or transliterated."
     },
     "settings#egress-region#invalid-error-msg": {
@@ -564,7 +564,7 @@
         "description": "Appears in a message box when Psiphon is run on an unsuppoted version of Windows. Is followed by a URL."
     },
     "psicash#transaction-error-title": {
-        "message": "PsiCash transaction error",
+        "message": "Ошибка транзакции PsiCash",
         "description": "Title of a modal dialog shown when a PsiCash transaction (like Speed Boost purchase) fails. The word 'PsiCash' must not be translated or transliterated."
     },
     "psicash#transaction-error-body": {
@@ -588,11 +588,11 @@
         "description": "Body text of a modal dialog shown when a PsiCash transaction (like Speed Boost purchase) fails. The user doesn't have enough PsiCash to make the attempted purchase. The word 'PsiCash' must not be translated or transliterated."
     },
     "psicash#transaction-TransactionAmountMismatch-title": {
-        "message": "PsiCash purchase price mismatch",
+        "message": "Ошибка цены покупки PsiCash",
         "description": "Title of a modal dialog shown when a PsiCash transaction (like Speed Boost purchase) fails. The word 'PsiCash' must not be translated or transliterated."
     },
     "psicash#transaction-TransactionAmountMismatch-body": {
-        "message": "PsiCash purchase prices are out-of-date. Your PsiCash state will be refreshed now.",
+        "message": "Цены на покупки PsiCash устарели. Ваш статус PsiCash будет обновлен.",
         "description": "Body text of a modal dialog shown when a PsiCash transaction (like Speed Boost purchase) fails. The word 'PsiCash' must not be translated or transliterated."
     },
     "psicash#transaction-TransactionTypeNotFound-title": {
@@ -600,27 +600,27 @@
         "description": "Title of a modal dialog shown when a PsiCash transaction (like Speed Boost purchase) fails. The word 'PsiCash' must not be translated or transliterated."
     },
     "psicash#transaction-TransactionTypeNotFound-body": {
-        "message": "The product you are trying to buy no longer exists. You may need to update or reinstall the application.",
+        "message": "Желаемый продукт более не доступен. Возможно, понадобится обновить или переустановить приложение.",
         "description": "Body text of a modal dialog shown when a PsiCash transaction (like Speed Boost purchase) fails. The word 'PsiCash' must not be translated or transliterated."
     },
     "psicash#transaction-InvalidTokens-title": {
-        "message": "Invalid PsiCash tokens",
+        "message": "Ошибка токенов PsiCash",
         "description": "Title of a modal dialog shown when a PsiCash transaction (like Speed Boost purchase) fails. The word 'PsiCash' must not be translated or transliterated."
     },
     "psicash#transaction-InvalidTokens-body": {
-        "message": "Your PsiCash tokens are invalid. Try restarting the application. If that doesn't work, you will need to <a href=\"https://psiphon3.com/faq.html#clear-windows-data\">clear your local storage</a>.",
+        "message": "Ошибка ваших токенов PsiCash. Попробуйте перезагрузить приложение. Если не поможет, возможно, вам придется очистить  <a href=\"https://psiphon3.com/faq.html#clear-windows-data\">локальное хранилище файлов </a>.",
         "description": "Body text of a modal dialog shown when a PsiCash transaction (like Speed Boost purchase) fails. The word 'PsiCash' must not be translated or transliterated."
     },
     "psicash#transaction-ServerError-title": {
-        "message": "PsiCash server error",
+        "message": "Ошибка сервера PsiCash",
         "description": "Title of a modal dialog shown when a PsiCash transaction (like Speed Boost purchase) fails. The word 'PsiCash' must not be translated or transliterated."
     },
     "psicash#transaction-ServerError-body": {
-        "message": "The PsiCash server responded with an error while trying to make the purchase. Please retry your purchase later.",
+        "message": "Во время покупки сервер PsiCash сообщил об ошибке. Пожалуйста, попробуйте сделать покупку позже. ",
         "description": "Body text of a modal dialog shown when a PsiCash transaction (like Speed Boost purchase) fails. The word 'PsiCash' must not be translated or transliterated."
     },
     "psicash#ui-speedboost-active": {
-        "message": "Speed&nbsp;Boost active for %s",
+        "message": "Турбоскорость активна: %s",
         "description": "When the user has Speed Boost active, this shows them how much time they have remaining. '%s' is like 'an hour' or '30 minutes' (localized). This text will be shown on a narrow button that should have at most 3 lines. You may use `&nbsp;`, `<br>`, `<wbr>`, `&shy;`, etc. to control word wrap. 'Speed Boost' is a reward that can be purchased with PsiCash credit. It provides unlimited network connection speed through Psiphon. Other words that can be used to help with translation are: 'turbo' (like cars), 'accelerate', 'warp speed', 'blast off', or anything that indicates a fast or unrestricted speed."
     },
     "psicash#ui-zerobalance-title": {
@@ -632,11 +632,11 @@
         "description": "Label for a button/link that opens a store web page were users can spend money to buy PsiCash. At this point, the user has no PsiCash at all. The word 'PsiCash' must not be translated or transliterated."
     },
     "psicash#ui-buymorepsi": {
-        "message": "Buy more PsiCash",
+        "message": "Купить еще PsiCash",
         "description": "Label for a button/link that opens a store web page were users can spend money to buy PsiCash. At this point, the user already has some PsiCash, but may wish to buy more. The word 'PsiCash' must not be translated or transliterated."
     },
     "psicash#ui-nsfbalance-buttontext": {
-        "message": "Needed for Speed&nbsp;Boost",
+        "message": "Нужно для Турбоскорости",
         "description": "Label on a disabled button, followed by a value in PsiCash indicating how much it costs to buy an hour of Speed Boost. When the user has enough PsiCash, the button will be enabled and the text will change. You may use `&nbsp;`, `<br>`, `<wbr>`, `&shy;`, etc. to control word wrap. 'Speed Boost' is a reward that can be purchased with PsiCash credit. It provides unlimited network connection speed through Psiphon. Other words that can be used to help with translation are: 'turbo' (like cars), 'accelerate', 'warp speed', 'blast off', or anything that indicates a fast or unrestricted speed."
     },
     "psicash#ui-enoughbalance-buttontext": {
@@ -668,15 +668,15 @@
         "description": "Body text of a modal dialog shown when the user tries to use (spend, buy, etc.) PsiCash, if they not currently connected. 'Use' here means buy, spend, or otherwise interact with. 'Psiphon' must not be translated/transliterated. 'PsiCash' must not be translated/transliterated."
     },
     "psicash#init-error-title": {
-        "message": "PsiCash initialization error",
+        "message": "Ошибка инициализации PsiCash",
         "description": "Title of a modal dialog shown when the PsiCash library fails to initialize. The word 'PsiCash' must not be translated or transliterated."
     },
     "psicash#init-error-body-unrecovered": {
-        "message": "PsiCash failed to initialize. This is probably due to a file system problem, such as being out of disk space. Your balance and other state have been lost. PsiCash will not be usable. You can try restarting the application to recover from the problem.",
+        "message": "Ошибка инициализации PsiCash. Возможно, дело в файловой системе, например, нехватке дискового пространства. Ваш баланс и прочие показатели сброшены. Использовать PsiCash нельзя. Можете перезапустить приложение, чтобы решить проблему.",
         "description": "Body text of a modal dialog shown when the PsiCash library fails to initialize. The word 'PsiCash' must not be translated or transliterated."
     },
     "psicash#init-error-body-recovered": {
-        "message": "PsiCash failed to initialize. This is probably due to a file system problem, such as being out of disk space. Your balance and other state have been reset.",
+        "message": "Ошибка инициализации PsiCash. Возможно, дело в файловой системе, например, нехватке дискового пространства. Ваш баланс и прочие показатели сброшены.",
         "description": "Body text of a modal dialog shown when the PsiCash library fails to initialize. The word 'PsiCash' must not be translated or transliterated."
     },
     "psicash#psiphon-speed": {
