--- a/src/webui/_locales/am/messages.json
+++ b/src/webui/_locales/am/messages.json
@@ -144,7 +144,7 @@
         "description": "Settings section heading. In this section the user can choose to use a Psiphon server in a specific country/region (or the default, which is just to choose the best/fastest region). The word 'Psiphon' must not be translated or transliterated."
     },
     "settings#egress-region#select-best-performance": {
-        "message": "ምርጥ አፈጻጸም ",
+        "message": "ከሁሉም የላቀ አፈጻጸም",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. This is the default option and indicates that Psiphon will use a server in the best/fastest region."
     },
     "settings#egress-region#select-us": {
@@ -252,11 +252,11 @@
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Australia will be used."
     },
     "settings#egress-region#description": {
-        "message": "Psiphon has servers in many different countries and regions. Using a Psiphon server in a region close to your home country will generally provide a better network connection, but you may wish to access websites and services like you are virtually in a specific country or region.",
+        "message": "Psiphon በተለያዩ ሃገራት አገልጋዮች አሉት። አሁን ላሉበት ሃገር ቅርብ የሆነ፣ የPsiphon አገልጋይ ያለበትን ሃገር መጠቀም አብዛኛውን ግዜ የተሻለ የአውታረመረብ ግንኙነት እንዲኖር ያደርጋል፤ ነገር ግን በመረጡት ሀገር ላይ እንደሆኑ መስለው ድረጣቢያን እና አገልግሎቶቹን ማግኘት ይችላሉ።",
         "description": "Help text in the 'Psiphon Server Region' settings section explaining what the option is and why the user may want to override the default ('best') setting value. The word 'Psiphon' must not be translated or transliterated."
     },
     "settings#egress-region#default": {
-        "message": "Choosing the default <strong>“Best Performance”</strong> option allows Psiphon to automatically choose a server, which will generally result in the best network connection.",
+        "message": "ነባሪ <strong>\"ከሁሉም የላቀ አፈጻጸም\"</strong> ምርጫ Psiphon በራስ ሠር አገልጋይ እንዲመርጥ ያደርገዋል፤ ይህም ብዙ ግዜ ከሁሉም የላቀ አፈጻጸም እንዲኖር ያደርጋል።",
         "description": "Help text below the 'Psiphon Server Region' combo box. It explains to the user what the default (and best) option is. The word 'Psiphon' must not be translated or transliterated."
     },
     "settings#egress-region#invalid-error-msg": {
@@ -268,7 +268,7 @@
         "description": "Title text of the error modal dialog shown when it is detected that the user has an invalid 'Psiphon Server Region' currently configured."
     },
     "settings#egress-region#error-modal-body-http": {
-        "message": "You have configured Psiphon to use a server in a specific region.<br>\nHowever, that region is no longer available.<br>\nYou must choose a new region or change to the default “Best Performance” choice.",
+        "message": "Psiphonን በልዩ ቀጠና ያለን አገልጋይ እንዲጠቀም አዋቅረውታል። <br>\nይሁንና ይህ ቀጠና አሁን የለም።  <br>\nአዲስ ቀጠና መምረጥ ወይም ወደ ነባሪው  “ከሁሉም የላቀ ፍጥነት ያለው ሀገር” ምርጫ መቀየር ይኖርብዎታል።",
         "description": "Descriptive body text of the error modal dialog shown when it is detected that the user has an invalid 'Psiphon Server Region' currently configured. The word 'Psiphon' must not be translated or transliterated."
     },
     "settings#local-proxy-ports#heading": {
@@ -351,21 +351,13 @@
         "message": "የላይ ወኪል አትጠቀም",
         "description": "Label for the checkbox that allows the user to override the default 'upstream proxy' usage and totally disable the feature."
     },
-    "settings#upstream-proxy#set-username-password-error-msg": {
-        "message": "የተጠቃሚ ስም እና የይለፍ ቃልን ማስገባት ወይም ላለማረጋገጥ ሁለቱንም ባዶ መተው አለብዎት።  ",
-        "description": "Error message that is shown if the user enters a value for one of 'Username' or 'Password', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to use an upstream proxy which doesn't require authentication."
+    "settings#upstream-proxy#set-hostname-error-msg": {
+        "message": "ስመ አስተናጋጅ ማቅረብ ይኖርብወታል ወይም ደግሞ የላዥረት ወኪል መስክ ባዶ ይተዉ ለራስሠር ምርጫ።",
+        "description": "Error message that is shown if the user enters a value for one of the other upstream proxy fields but not for 'hostname', which is required. Alternatively, the user can leave all fields blank to allow the automatic behaviour."
     },
-    "settings#upstream-proxy#set-hostname-port-error-msg": {
-        "message": "ስመ አስተናጋጅ እና ወደቡን ማስገባት ወይም በራስሠር እንዲመርጥ ሁለቱንም ባዶ መተው አለብዎት። ",
-        "description": "Error message that is shown if the user enters a value for one of 'Upstream Hostname' or 'Upstream Port', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to allow the automatic behaviour."
-    },
-    "settings#upstream-proxy#set-hostname-port-without-authentication-error-msg": {
-        "message": "የተጠቃሚ ስም እና የማለፊይ ቃልን ለማዋቀር በተጨማሪ ስመ አስተናጋጅ እና ወደብን ማዋቀር ይፈልጋል።",
-        "description": "Error message that is shown if the user enters a value for 'Username' and 'Password' but doesn't set a 'Hostname' and 'Port' -- this is not valid, as both are required. Alternatively, the user can leave all fields blank to allow the automatic behaviour."
-    },
-    "settings#upstream-proxy#set-domain-without-authentication-error-msg": {
-        "message": "ጎራን ለማዋቀር የተጠቃሚ ስም እና የማለፊይ ቃልን ማዋቀር ይፈልጋል።",
-        "description": "Error message that is shown if the user enters a value for 'Domain', but not 'Username' and 'Password' -- this is not valid, as domain authentication requires a Username and Password. Alternatively, the user can leave all fields blank to allow the automatic behaviour."
+    "settings#upstream-proxy#set-username-error-msg": {
+        "message": "የተጠቃሚ ስም ማቅረብ ይኖርብወታል የይለፍ ቃል ወይም ጎራ የሚያዋቅሩ ከሆነ፤ ወይም ደግሞ ሁሉንም የማረጋገጫ ዘርፍ ባዶ ይተዉ ማረጋገጫ ላለመጠቀም።",
+        "description": "Error message that is shown if the user enters a value for one of 'Password' or 'Domain', but does not provide a 'Username' -- this is not valid, as username is are required. Alternatively, the user can leave all authentication fields blank to use an upstream proxy which doesn't require authentication."
     },
     "settings#upstream-proxy#error-modal-title": {
         "message": "የላይ ወኪል ስህተት ",
