--- a/src/webui/_locales/my/messages.json
+++ b/src/webui/_locales/my/messages.json
@@ -351,21 +351,13 @@
         "message": "အင်တာနက်အားချိတ်ဆက်ရန် ကြားခံ အသုံးမပြုပါနှင့်",
         "description": "Label for the checkbox that allows the user to override the default 'upstream proxy' usage and totally disable the feature."
     },
-    "settings#upstream-proxy#set-username-password-error-msg": {
-        "message": "သင့်အနေဖြင့်အသုံးပြုသူအမည်နှင့် စကားဝှက်နှစ်ခုလုံးကို သတ်မှတ်ပေးရမည် သို့မဟုတ် တိုက်ဆိုင်စစ်ဆေးရန် မရှိပါက ကွက်လပ်အဖြစ်သာချန်ထားရန်။",
-        "description": "Error message that is shown if the user enters a value for one of 'Username' or 'Password', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to use an upstream proxy which doesn't require authentication."
+    "settings#upstream-proxy#set-hostname-error-msg": {
+        "message": "You must provide a Hostname, or leave all Upstream Proxy fields blank for automatic selection.",
+        "description": "Error message that is shown if the user enters a value for one of the other upstream proxy fields but not for 'hostname', which is required. Alternatively, the user can leave all fields blank to allow the automatic behaviour."
     },
-    "settings#upstream-proxy#set-hostname-port-error-msg": {
-        "message": "Hostname နှင့် Port နှစ်ခုလုံးသတ်မှတ်ပေးရမည် သို့မဟုတ် အလိုအလျောက်ရွေးချယ်ပေးမှုအတွက် နှစ်ခုလုံးကို ကွက်လပ်အဖြစ်ထားရန်။ ",
-        "description": "Error message that is shown if the user enters a value for one of 'Upstream Hostname' or 'Upstream Port', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to allow the automatic behaviour."
-    },
-    "settings#upstream-proxy#set-hostname-port-without-authentication-error-msg": {
-        "message": "အသုံးပြုသူအမည်နှင့် စကားဝှက်သည် Hostname နှင့် Port အပြင်အဆင်ကို သတ်မှတ်ရန်အတွက်လည်း လိုအပ်သည်။ ",
-        "description": "Error message that is shown if the user enters a value for 'Username' and 'Password' but doesn't set a 'Hostname' and 'Port' -- this is not valid, as both are required. Alternatively, the user can leave all fields blank to allow the automatic behaviour."
-    },
-    "settings#upstream-proxy#set-domain-without-authentication-error-msg": {
-        "message": "အသုံးပြုသူအမည်နှင့် စကားဝှက်သည် ဒိုမိန်း အပြင်အဆင်ကို သတ်မှတ်ရန်အတွက် လိုအပ်သည်။ ",
-        "description": "Error message that is shown if the user enters a value for 'Domain', but not 'Username' and 'Password' -- this is not valid, as domain authentication requires a Username and Password. Alternatively, the user can leave all fields blank to allow the automatic behaviour."
+    "settings#upstream-proxy#set-username-error-msg": {
+        "message": "You must provide a Username if you are setting Password or Domain; or leave all authentication fields blank for no authentication.",
+        "description": "Error message that is shown if the user enters a value for one of 'Password' or 'Domain', but does not provide a 'Username' -- this is not valid, as username is are required. Alternatively, the user can leave all authentication fields blank to use an upstream proxy which doesn't require authentication."
     },
     "settings#upstream-proxy#error-modal-title": {
         "message": "အင်တာနက်အားချိတ်ဆက်ပေးသည့် ကြားခံတွင် ပြဿနာတက်နေသည်",
